# snowflake_classifier

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Isolator.cpp  Isolator.h  S3.cpp  Timer.cpp  Timer.h  cuda_functions.cu  cuda_functions.h  main.cpp  savepng.cpp
src/crop_filter/: Isolator.cpp  S3.cpp  S3.h  blur_detector.cpp  blur_detector.h  crop_filer.h  crop_filter.cpp  crop_filter.h  isolator.cpp  isolator.h
src/crop_filter/core/: asserts.cpp  asserts.h  defines.h  logger.cpp  logger.h
src/crop_filter/cuda/: cuda_functions.cu  cuda_functions.h  cuda_polyfit.cpp  cuda_polyfit.h
src/util/: savepng.h  timer.cpp  timer.h
